style.css
/* ... */
.newsletter-container{
    background-color: var(--background-color);
    max-width: 1280px;
    height: 50vh;
    margin: 0 auto;

}

.newsletter-content{
    display: flex;
    flex-direction: row;
    background-color: var(--light-gray);
    height: 100%;
    border-radius: 8px;
    overflow: hidden;
}

.newsletter-left{
    height: 100%;
    width: 50%;
    position: relative;
    display: none;
}

.newsletter-left img{
    position: absolute;
    inset: 0;
    height: 100%;
    width: 100%;
    object-fit: cover;
    object-position: center;
}

.newsletter-right{
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 0.5rem;
    justify-content: center;
    align-items: flex-start;
    width: 98%;
}

@media screen and (min-width: 768px){
    .newsletter-container{
        padding: 2rem;
    }
    .newsletter-left{
        display: block;
        width: 50%;
    }
    .newsletter-right{
        width: 50%;
    }
}

.news-info{
    padding: 0 3rem;
}

.news-title{
    font-size: 1.7rem;
    font-weight: bold;
    color: var(--primary-color);
}

.news-desc{
    text-align: left;
    color:#777;
}
.news-form{
    padding: 0 3rem;
    display: flex;
    margin-bottom: 1rem;
    gap: 0.6rem;
}

.news-email{
    background-color: var(--background-color);
    width: 100%;
    color: #333;
    outline: none;
    border: 1px solid #ccc;
    border-radius: 4px;
    padding: 0.5rem 0.75rem;
}

.news-email:hover{
    border-color: #2563eb;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.news-send-button{
    color: var(--background-color);
    background-color: var(--primary-color);
    border: none;
    border-radius: 0.3rem;
    padding: 0.5rem 1rem;
}

.news-send-button:hover{
    background-color: var(--link-color);
}

.privacy-policy{
    font-size: 1rem;
    padding: 0 3rem;
    color: #777;
}

.news-link{
    text-decoration: underline;
    color: var(--accent-color);
}


@media screen and (min-width: 768px){
    .news-title{
        font-size: 2.5rem;
    }
}

.footer-container{
    background-color: var(--background-color);
    margin: 0 auto;
    padding: 0 2rem;
    display: flex;
    flex-direction: column;
    max-width: 1280px;
}

.footer{
    max-width: 100%;
    padding: 1rem 0.3rem;
    text-align: left;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding-right: 2rem;
}

.footer-top{
    width: 38%;
    display: flex;
    flex-direction: column;
    gap: 1.65rem;
}
.comp-logo{
    display: flex;
    justify-content: flex-start;
    margin-bottom: -1.9rem;
}

.footer-logo-link{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 0.8rem;
    font-size: 1.28rem;
    font-weight: bold;
    color: black;
}

.footer-logo-svg{
    width: 2rem;
    height: 6rem;
}

.footer-para{
    font-size: 1rem;
    color: #777;
}

.social{
    display: flex;
    gap: 0.9rem;
}
.social-icon{
    width: 1.5rem;
    height: 1.5rem;
}

.footer-grid{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 5.67rem;
    width: 58%;
    padding: 2rem 0;
}

.footer-grid-heading{
    font-size: 1.07rem;
    font-weight: bold;
    color: var(--text-color);
    margin-bottom: 2rem;
}

.footer-links-list{
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

ul{
    list-style-type: none;
}

.footer-link{
    color: #777;
    font-size: 0.85rem;
}

.footer-copyright{
    color: var(--gray);
    font-size: 0.875rem;
    padding-top: 2rem;
    padding-bottom: 2rem;
    margin-top: 1.5rem;
    border-top: 1px solid #e5e7eb;
}

@media screen and (max-width: 768px){
    .footer{
        flex-direction: column;
        align-items: center;
        justify-content: center;
        
    }
    .footer-grid{
        grid-template-columns: repeat(2, 1fr);
        justify-content: space-evenly;
    }
}

